[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Icons/round_timer_1024x256.png" type="Texture" id=5]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.68176
margin_top = 0.840897
margin_right = 1.68176
margin_bottom = 0.840881
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phase" type="Label" parent="."]
anchor_left = 0.3
anchor_top = 0.97
anchor_right = 0.7
anchor_bottom = 1.0
margin_left = 2.77277
margin_top = -510.474
margin_right = 3.17279
margin_bottom = -497.474
custom_fonts/font = ExtResource( 2 )
text = "Waiting for Server..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponAmmo" type="Label" parent="."]
margin_right = 23.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponType" type="TextureRect" parent="."]
margin_left = 46.0445
margin_top = 0.749153
margin_right = 86.0445
margin_bottom = 40.7492
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerProgressBar" type="TextureProgress" parent="."]
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 0.1
max_value = 1.0
step = 0.001
value = 0.27
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 1, 1, 1, 0.160784 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CapturePoints" type="HBoxContainer" parent="TimerProgressBar"]
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashAmmo" type="Label" parent="."]
anchor_top = 0.07
anchor_bottom = 0.07
margin_right = 23.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="AspectRatioContainer"]
margin_right = 150.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="AspectRatioContainer/ViewportContainer"]
size = Vector2( 150, 150 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="AspectRatioContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 5, 0 )
cull_mask = 1048572
projection = 1
size = 50.0
